CHALLENGES fixed z-index fuckup with oversized check mark

--- a/Challenge/static/css/challenge.css
+++ b/Challenge/static/css/challenge.css
@@ -175,6 +175,8 @@ h1 {
 }
 
 .stack_next {
+	z-index:192;
+	position:relative;
 }
 
 .stack .title {
